# BasicFastAPIExample

./: README.md  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 7467781db491_base.py  8568b67f72a2_base.py
app/: main.py
app/api/: __init__.py  items.py
app/core/: log_config.py
app/db/: session.py
app/db/dao/: __init__.py
app/db/models/: __init__.py  item.py
app/db/repository/: item_repository.py
app/middlewares/: __init__.py  error_handling_middleware.py  logging_middleware.py  rate_limiting.py
app/schemas/: item.py
app/services/: item_service.py
src/app/: main.py
src/app/api/: items.py  users.py
src/app/db/: session.py
src/app/db/models/: __init__.py  item.py  user.py
src/app/db/repository/: item_repository.py  user_repository.py
src/app/schemas/: item.py
tests/: conftest.py  test_items.py  test_users.py  users.py
