[tool.poetry]
name = "basicexample"
version = "0.1.0"
description = ""
authors = ["Monish-Neoito <monish.k@neoito.com>"]
readme = "README.md"
packages = [{include = "basicexample", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.2"
uvicorn = "^0.30.6"
fastapi = "^0.112.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
